# taggr

./: .gitignore  CMakeLists.txt  README.MD
include/: ape.h  collectfiles.h  dup.h  flac.h  fn2tag.h  helpers.h  magic.h  main.h  mp3.h  mp4.h  ogg.h  opus.h  tag2fn.h  wv.h
src/: ape.cpp  ape.h  collectfiles.cpp  dup.cpp  env_win.cpp  flac.cpp  flac.h  fn2tag.cpp  helpers.cpp  helpers.h  magic.cpp  magic.h  main.cpp  main.h  mp3.cpp  mp3.h  mp4.cpp  ogg.cpp  opus.cpp  tag2fn.cpp  wv.cpp  wv.h
